[gd_scene load_steps=5 format=3 uid="uid://dnau6vsw6xhvj"]

[ext_resource type="Script" path="res://Escenas/game.gd" id="1_0at6x"]
[ext_resource type="PackedScene" uid="uid://2ixspb63s5kv" path="res://Escenas/player.tscn" id="2_3brky"]
[ext_resource type="Texture2D" uid="uid://dgcw13m7o5oh0" path="res://icon.svg" id="2_ytiee"]

[sub_resource type="LabelSettings" id="LabelSettings_ngsci"]
font_size = 60

[node name="Game" type="Node"]
script = ExtResource("1_0at6x")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0.32549, 0.835294, 1)
texture_filter = 1
position = Vector2(835, 522)
scale = Vector2(17.6016, 11.5391)
texture = ExtResource("2_ytiee")

[node name="Player" parent="." groups=["MiJugador"] instance=ExtResource("2_3brky")]
position = Vector2(554, 367)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1936, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 83.0
offset_top = 78.0
offset_right = 272.0
offset_bottom = 118.0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "ENEMIGOS A MATAR: "

[node name="LabelEnemigos" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "99"

[node name="VictoriaCanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Label" type="Label" parent="VictoriaCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -126.0
offset_right = 465.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "FELICIDADES GANASTE EL JUEGO"
label_settings = SubResource("LabelSettings_ngsci")

[node name="ButtonReiniciar" type="Button" parent="VictoriaCanvasLayer/Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = 48.0
offset_right = 364.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "GENIAL, REINICIAR"

[node name="ButtonSalir" type="Button" parent="VictoriaCanvasLayer/Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = 181.0
offset_right = 369.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "SALIR"

[connection signal="pressed" from="VictoriaCanvasLayer/Label/ButtonReiniciar" to="." method="_on_button_reiniciar_pressed"]
[connection signal="pressed" from="VictoriaCanvasLayer/Label/ButtonSalir" to="." method="_on_button_salir_pressed"]
